hey, ace-builds is on npm

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "install": "./bin/install.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ace-builds": "^1.2.9"
+  }
 }
